# ltsgns_ai4science

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg
configs/: default.yml
configs/cnp_training/: deformable_plate.yml  exp_1.yml  multi_decision_toy_task.yml
configs/constant_posterior_training/: deformable_plate.yml  exp_1.yml  multi_modal_toy_task.yml  vis_for_jour_fixe.yml
configs/debug/: cnp_implementation.yml  debug_for_niklas.yml  debug_likelihood_weightings.yml  debug_likelihood_weightings_same_context_length.yml  debug_normalizers.yml  debug_pybullet.yml  debug_tissue_manipulation.yml  lts_gns_prodmp_debug.yml  playground.yml
configs/evaluation/: evaluation_default.yml  old_code_evaluation.yml
configs/exp_2/: lts_gns_prodmp_bwuni_gpu_test.yml  lts_gns_prodmp_dev_accelerated.yml
configs/lts_gns_prodmp_training/: lts_gns_prodmp_constant_posterior.yml  lts_gns_prodmp_multidaft_deformable_plate.yml  lts_gns_prodmp_multidaft_deformable_plate_z_grid.yml  lts_gns_prodmp_multidaft_figure_1.yml  lts_gns_prodmp_multidaft_multi_decision.yml  lts_gns_prodmp_multidaft_tissue.yml  lts_gns_prodmp_task_properties.yml
configs/lts_gns_training/: checkpoint_dummy.yml  deformable_plate.yml  exp_1.yml  multi_decision_toy_task.yml  (+2 more)
playground/: 3d_visualization.py  concave_meshing.py  hungarian_algorithm.py  pc2mesh.py
run_scripts/: all_methods_all_tasks.sh  eval_deformable_plate_animations.sh  eval_last_step.sh  eval_tissue_manipulation_animations.sh  eval_tissue_scalars.sh  exp_2_deformable_plate.sh  exp_2_tissue_manipulation.sh
(+504 files in other folders)
