[metadata]
name = lts_gns
description = Latent Task-specific Graph Network Simulator
author = anonymous
license = tbd
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
install_requires =
    ipykernel
    numpy
    tqdm
    pandas
    seaborn
    torch
    torchvision
    torch-geometric
    torch-scatter
    torch-sparse
    torch-cluster
    cw2
    einops
    tqdm
    wandb
    plotly
    matplotlib
; todo test the above
;    multi_daft_vi_torch

python_requires = >=3.10
package_dir =
    =src
packages =
    lts_gns